# talks

./: .gitattributes  .gitignore  Makefile  README.md  dynamia_slides.md  hami_enterprise.md  kcd_vietnam.md  pyproject.toml  snow_corp_cncf.md
assets/snow/: snow_kubecon.drawio
